--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "less-loader": "^5.0.0",
     "qrcodejs2": "^0.0.2",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.6.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
